frontend/test/should_pass/param_005.grg
test r : (Node) {
  n : Node;
  return(n);
}

