frontend/test/should_fail/param_014.grg
rule ruleWithUnknownParameterType(n:UnknownType<Node>) {
	modify {
	}
}

test testWithUnknownParameterType(n:UnknownType<Node>) { }
